Successfully compiled the CLI project